--- a/config/locales/model.ja.yml
+++ b/config/locales/model.ja.yml
@@ -2,6 +2,7 @@ ja:
   activerecord:
     models:
       task: タスク
+      user: ユーザー
     attributes:
       task:
         task_name: タスク名
@@ -10,6 +11,12 @@ ja:
         valid_date: 終了期限
         status: ステータス
         priority: 優先順位
+      user:
+        user_name: ユーザー名
+        email: メールアドレス
+        password: パスワード
+        password_confirmation: パスワード（確認）
+
 # ja:
 #   activerecord:
 #     attributes:
