--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -19,6 +19,7 @@ ja:
       logged in: ログインしました。
       logged out: ログアウトしました。
       login failed: ログインに失敗しました。
+      user created: ユーザーを登録しました。
   layouts:
     application:
     header:
