--- a/config/locales/model.ja.yml
+++ b/config/locales/model.ja.yml
@@ -16,7 +16,7 @@ ja:
         email: メールアドレス
         password: パスワード
         password_confirmation: パスワード（確認）
-
+        admin: 管理者権限
 # ja:
 #   activerecord:
 #     attributes:
