--- a/config/locales/views/task/ja.yml
+++ b/config/locales/views/task/ja.yml
@@ -25,6 +25,8 @@ ja:
       sort by priority: 優先順位でソートする
       need loggedin: ログインして下さい。
       editted: ユーザー情報を編集しました。
+      task created: タスクを登録しました。
+      task edited: タスクを編集しました。
     form:
       create new: 新規
       Not started: 未着手
@@ -40,3 +42,4 @@ ja:
       title: 新規登録
       create labels: ラベル新規作成
       # label_name: ラベル名
+        
