グループ、UserGroup(中間テーブルのモデル)の実装(作成、参加、離脱まで)

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -35,6 +35,8 @@ ja:
       cannot create user: ユーザーを作成する権限がありません。
       cannot see other details: ログインユーザの詳細のみ閲覧可能です。
       admin needs minimum one: 管理者は一人以上必要です。
+      unjoin: 離脱
+      join: 参加
   layouts:
     application:
     header:
@@ -44,6 +46,7 @@ ja:
       login: ログイン
       logout: ログアウト
       admin: 管理者画面
+      groups: グループ
     footer:
   views:
     pagination:
