--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -47,7 +47,7 @@ ja:
       logout: ログアウト
       admin: 管理者画面
       groups: グループ
-      labels: ラベル
+      labels: ラベル一覧
     footer:
   views:
     pagination:
